--- a/src/Main/main.module.css
+++ b/src/Main/main.module.css
@@ -6,7 +6,6 @@
 .container {
     display: flex;
     justify-content: center;
-    border: 1px solid rgb(0, 153, 255);
     border-radius: 20px;
     padding: 20px;
     margin: 50px auto;
@@ -16,6 +15,8 @@
 
 .textarea {
     display: grid;
+    text-align: center;
+    justify-items: center;
     border: 5px solid rgb(4, 0, 255);
     border-radius: 20px;
     padding: 20px;
@@ -33,8 +34,13 @@
     font-size: 50px;
 }
 
+.textarea form {
+    margin: auto;
+}
+
 .textarea textarea {
     height: 70px;
+    width: 500px;
     margin: 20px;
     padding: 10px;
     font-size: 20px;
@@ -46,6 +52,8 @@
     font-family: RubikVinyl;
     border-radius: 20px;
     font-size: 20px;
+    width: 500px;
+    max-width: 500px;
 }
 
 .textarea button:hover {
